# openmedallion

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/config/: index.html
api/contracts/: index.html
api/helpers/: index.html
api/pipeline/: index.html
api/storage/: index.html
concepts/architecture/: index.html
concepts/udf-guide/: index.html
docs/: index.md
docs/api/: config.md  contracts.md  helpers.md  pipeline.md  storage.md
docs/concepts/: architecture.md  udf-guide.md
docs/guides/: kestra.md
docs/reference/: cli.md  yaml-schema.md
examples/: README.md
examples/ecommerce_analytics_demo/: README.md  inspect.py  seed.py
examples/ecommerce_analytics_demo/ecommerce/: README.md  kestra_flow.yaml  kestra_flow.yml  main.yaml
examples/ecommerce_analytics_demo/ecommerce/.ipynb_checkpoints/: main-checkpoint.yaml
examples/ecommerce_analytics_demo/ecommerce/backend/: bronze.yaml  gold.yaml  silver.yaml
examples/ecommerce_analytics_demo/ecommerce/ipynb/: walkthrough.ipynb
examples/ecommerce_analytics_demo/projects/ecommerce/: bronze.yaml  gold.yaml  main.yaml  silver.yaml
examples/incremental_sql_demo/: README.md  add_delta.py  setup_db.py
examples/incremental_sql_demo/projects/retail/: bronze.yaml  main.yaml  silver.yaml
examples/incremental_sql_demo/retail/: README.md  kestra_flow.yaml  kestra_flow.yml  main.yaml
examples/incremental_sql_demo/retail/.ipynb_checkpoints/: main-checkpoint.yaml
examples/incremental_sql_demo/retail/backend/: bronze.yaml  gold.yaml
examples/local_parquet_demo/: README.md  seed.py
examples/local_parquet_demo/demo/: README.md  kestra_flow.yaml  kestra_flow.yml
guides/kestra/: index.html
openmedallion/: __init__.py
openmedallion/cli/: main.py
openmedallion/config/: __init__.py  loader.py  validator.py
openmedallion/contracts/: __init__.py
openmedallion/contracts/.ipynb_checkpoints/: udf-checkpoint.py
openmedallion/helpers/: aggregations.py  dates.py  joins.py  windows.py
openmedallion/pipeline/: bronze.py  export.py  gold.py  silver.py
openmedallion/pipeline/.ipynb_checkpoints/: bronze-checkpoint.py  nodes-checkpoint.py
openmedallion/scaffold/: templates.py
openmedallion/storage/: __init__.py  fs.py
openmedallion/viz/: dag.py  server.py  tracker.py
reference/cli/: index.html
reference/yaml-schema/: index.html
search/: search_index.json
site/: 404.html  index.html
site/api/config/: index.html
site/api/contracts/: index.html
site/api/helpers/: index.html
site/api/pipeline/: index.html
site/api/storage/: index.html
site/concepts/architecture/: index.html
site/concepts/udf-guide/: index.html
site/reference/cli/: index.html
site/reference/yaml-schema/: index.html
site/search/: search_index.json
tests/: conftest.py  test_config.py  test_export.py  test_gold.py  test_helpers.py  test_layers.py  test_silver.py  test_udfs.py
(+17 files in other folders)
