[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmedallion"
version = "2026.4.1"
description = "Declarative medallion pipelines in pure open-source Python — local first, cloud portable, fast by default."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "data engineering",
    "etl",
    "elt",
    "medallion",
    "pipeline",
    "polars",
    "dlt",
    "hamilton",
    "data lakehouse",
    "bronze silver gold",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dlt[filesystem,sql_database]>=1.4",
    "sf-hamilton>=1.82",
    "polars>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

[project.optional-dependencies]
s3  = ["s3fs>=2024.1", "boto3>=1.34"]
viz = ["graphviz>=0.20"]
dev = ["pytest>=8", "pytest-anyio>=0.0"]

[project.urls]
Homepage      = "https://github.com/tummala-hareesh/openmedallion"
Repository    = "https://github.com/tummala-hareesh/openmedallion"
Documentation = "https://github.com/tummala-hareesh/openmedallion/tree/main/docs"
"Bug Tracker" = "https://github.com/tummala-hareesh/openmedallion/issues"
Changelog     = "https://github.com/tummala-hareesh/openmedallion/blob/main/CHANGELOG.md"

[project.scripts]
medallion = "openmedallion.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["openmedallion"]

[tool.hatch.build.targets.sdist]
include = [
    "openmedallion/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
